testsuite/gna/bug0139/repro4.ref
repro4.vhdl:18:9:error: duplicate choices for 8 to 15
      a (23 downto 8) => v2,
        ^
